--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/issues
 spring.datasource.username=root
-spring.datasource.password=123SuperLifter
+spring.datasource.password=***
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
